<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="active_method_chooser_summary_shizuku">For non-rooted devices, requires Shizuku and selecting Thanox within Shizuku; Note: Due to system permission restrictions, the Shizuku mode has very limited features.</string>
    <string name="active_method_chooser_summary_xposed_magisk">For rooted devices, requires Magisk or LSPosed framework; LSPosed mode provides the most features, while Magisk mode has relatively fewer features.</string>
    <string name="activity_title_apps_manager">App manager</string>
    <string name="activity_title_bg_restrict">Background task</string>
    <string name="activity_title_clean_when_task_removed">Clean tasks</string>
    <string name="activity_title_data_cheat">Incognito</string>
    <string name="activity_title_process_manage">Running（%s）</string>
    <string name="activity_title_start_restrict">Background start</string>
    <string name="add_to_pkg_set">Add to set</string>
    <string name="all">All</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_description">I am Thanos! 😈👌</string>
    <string name="app_name">クロウ·リード</string>
    <string name="app_name_thanox">Thanox</string>
    <string name="app_picker_title">Pick app</string>
    <string name="app_select_activate_method">Which activation method do you prefer?</string>
    <string name="app_state_disabled">Disabled</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps_count">%s Apps</string>
    <string name="autofill">Autofill</string>
    <string name="background_process_stop_description">This is the old app process, still running, just in case. Stopping is usually not recommended.</string>
    <string name="badge_app_idle">Idle</string>
    <string name="badge_app_running">Running</string>
    <string name="badge_framework_err">Error</string>
    <string name="badge_paid_app">Paid</string>
    <string name="badge_power_save_off">Battery</string>
    <string name="badge_trying_app">Trial</string>
    <string name="bc_on_screen_off">Stop on screen off</string>
    <string name="bc_on_screen_off_summary">Force stop apps when screen goes off</string>
    <string name="bc_on_task_removed">Stop on task removal</string>
    <string name="bc_on_task_removed_summary">Force stop apps when the recent task was removed</string>
    <string name="bg_clean">Bg tasks</string>
    <string name="bg_clean_apps_count">Prevent %s app from running in background</string>
    <string name="billing_state_row_not_trust_message">"Thanox may come from untrusted installations, Pro versions are only available in the Google play store, and should not be installed from any other source. 

Note: Untrusted installations can cause devices to become abnormally stuck, configuration data loss!!!"</string>
    <string name="billing_state_row_not_trust_title">Un-Trusted</string>
    <string name="biometric_or_screen_lock_prompt_message">Use your biometric or screen lock to continue</string>
    <string name="biometric_prompt_message">Use your biometric to continue</string>
    <string name="boost_status_available">Ava %s</string>
    <string name="boost_status_blocked_start_count">Blocked %s app startup requests</string>
    <string name="boost_status_mem_usage_percent">Memory %s</string>
    <string name="boost_status_not_enabled">Not enabled</string>
    <string name="boost_status_running_apps"> running</string>
    <string name="boost_status_swap_usage_percent">Swap %s</string>
    <string name="boost_status_system_memory">Memory</string>
    <string name="boost_status_system_storage">Storage</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="cached">Cache</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="card_message_plugin_available">Plugin consist of some unstable or non-critical functions.</string>
    <string name="card_title_plugin_available">Install Thanox plugin</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="cheat_field_auto_gen">Fill with random fields</string>
    <string name="chip_title_app_only_cloned_app">Cloned</string>
    <string name="chip_title_app_only_disabled">Disabled</string>
    <string name="chip_title_app_only_enable">Enabled</string>
    <string name="chip_title_app_only_running">Running</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="common_badge_text_experiment">EXP</string>
    <string name="common_darg_sort">Drag to sort</string>
    <string name="common_dialog_message_are_you_sure">Are you sure? Take care!</string>
    <string name="common_experiment_feature_warning_message">This feature is an experimental feature and is not yet stable. It is recommended that you back up your data before enabling this feature to prevent data loss due to unexpected bugs.</string>
    <string name="common_fab_title_add">Add</string>
    <string name="common_fab_title_done">Done</string>
    <string name="common_generic_error">Oops. Something went wrong</string>
    <string name="common_menu_title_batch_select">Batch select</string>
    <string name="common_menu_title_export_to_clipboard">Export to clipboard</string>
    <string name="common_menu_title_import">Import</string>
    <string name="common_menu_title_import_from_clipboard">Import from clipboard</string>
    <string name="common_menu_title_re_import">Re-Import</string>
    <string name="common_menu_title_remove">Remove</string>
    <string name="common_menu_title_rename">Rename</string>
    <string name="common_menu_title_search">search</string>
    <string name="common_menu_title_select_all">All yes</string>
    <string name="common_menu_title_select_all_in_this_page">Yes in this page</string>
    <string name="common_menu_title_un_select_all">All no</string>
    <string name="common_menu_title_un_select_all_in_this_page">No in this page</string>
    <string name="common_tips">Tips</string>
    <string name="dialog_message_create_shortcut_apk">Create a shortcut stub apk, you can install this app to as a workaround of the launcher icon for disabling apps</string>
    <string name="module_activity_trampoline_add_dialog_hint_from">Original Activity</string>
    <string name="module_activity_trampoline_add_dialog_hint_note">Note</string>
    <string name="module_activity_trampoline_add_dialog_hint_to">Replace to Activity</string>
    <string name="module_activity_trampoline_app_name">Activity Trampoline</string>
    <string name="module_activity_trampoline_title_export_comp_replacements">Export my rules</string>
    <string name="module_activity_trampoline_title_import_comp_replacements">Import rules</string>
    <string name="module_activity_trampoline_title_pull_from_server">Get some rule form service</string>
    <string name="module_donate_activation_code_my_code">My Code</string>
    <string name="module_donate_activation_code_start_verify">Begin verify</string>
    <string name="module_donate_activation_code_valid_remain_time">Remaining</string>
    <string name="module_donate_pay_alipay">Ali pay</string>
    <string name="module_donate_pay_wechat">Wechat pay</string>
    <string name="module_notification_recorder_clear_all">Clear all</string>
    <string name="module_notification_recorder_export">Export</string>
    <string name="module_notification_recorder_settings">Settings</string>
    <string name="module_notification_recorder_stats">Stats</string>
    <string name="module_profile_edit_delete">Delete</string>
    <string name="module_profile_edit_show_hide_symbols">Symbol bar</string>
    <string name="module_profile_rule_edit_action_save">Save</string>
    <string name="module_profile_rule_edit_action_text_size_dec">Decrease</string>
    <string name="module_profile_rule_edit_action_text_size_inc">Increase</string>
    <string name="module_profile_rule_impor_example">Import examples</string>
    <string name="module_profile_rule_impor_from_file">Import from file</string>
    <string name="module_profile_rule_new">New</string>
    <string name="module_profile_rule_online">View Online Profiles</string>
    <string name="module_profile_rule_wiki">Wiki</string>
    <string name="module_profile_title_action_console">Action Console</string>
    <string name="module_profile_title_global_var">Global variant</string>
    <string name="module_profile_title_log">Log</string>
    <string name="module_profile_title_rule_engine">Engine</string>
    <string name="nnf_filename">Filename</string>
    <string name="nnf_list_cancel">@android:string/cancel</string>
    <string name="nnf_list_ok">@android:string/ok</string>
    <string name="title_stub_apk_app_name">App label</string>
    <string name="title_stub_apk_app_version_code">Version code</string>
    <string name="title_stub_apk_app_version_name">Version name</string>
</resources>