<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/module_profile_ic_add_fill" android:id="@id/action_add" android:title="@string/module_profile_rule_new" app:showAsAction="always" />
    <item android:icon="@drawable/module_profile_ic_book_open_fill" android:id="@id/action_view_wiki" android:title="@string/module_profile_rule_wiki" app:showAsAction="never" />
    <item android:icon="@drawable/module_profile_ic_download_cloud_fill" android:id="@id/action_import_from_file" android:title="@string/module_profile_rule_impor_from_file" app:showAsAction="never" />
    <item android:icon="@drawable/module_profile_ic_download_cloud_fill" android:id="@id/action_import_examples" android:title="@string/module_profile_rule_impor_example" app:showAsAction="never" />
    <item android:icon="@drawable/module_profile_ic_download_cloud_fill" android:id="@id/action_online" android:title="@string/module_profile_rule_online" app:showAsAction="never" />
    <item android:icon="@drawable/module_profile_ic_download_cloud_fill" android:id="@id/action_global_var" android:title="@string/module_profile_title_global_var" app:showAsAction="never" />
    <item android:icon="@drawable/module_common_ic_settings_fill" android:id="@id/action_rule_engine" android:title="@string/module_profile_title_rule_engine" app:showAsAction="never" />
    <item android:icon="@drawable/module_common_ic_settings_fill" android:id="@id/action_rule_console" android:title="@string/module_profile_title_action_console" app:showAsAction="never" />
    <item android:icon="@drawable/module_common_ic_settings_fill" android:id="@id/action_rule_log" android:title="@string/module_profile_title_log" app:showAsAction="never" />
</menu>
