<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/action_show_hide_symbols" android:title="@string/module_profile_edit_show_hide_symbols" app:showAsAction="never" />
    <item android:icon="@drawable/module_profile_ic_delete_bin_fill" android:id="@id/action_delete" android:title="@string/module_profile_edit_delete" app:showAsAction="always" />
    <item android:icon="@drawable/module_profile_ic_zoom_in_fill" android:id="@id/action_text_size_inc" android:title="@string/module_profile_rule_edit_action_text_size_inc" app:showAsAction="always" />
    <item android:icon="@drawable/module_profile_ic_zoom_out_fill" android:id="@id/action_text_size_dec" android:title="@string/module_profile_rule_edit_action_text_size_dec" app:showAsAction="always" />
    <item android:icon="@drawable/module_profile_ic_clipboard_fill" android:id="@id/action_paste" android:title="@android:string/paste" app:showAsAction="always" />
    <item android:icon="@drawable/module_profile_ic_save_fill" android:id="@id/action_save_apply" android:title="@string/module_profile_rule_edit_action_save" app:showAsAction="always" />
</menu>
