<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/common_view_margin_default" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.textview.MaterialTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/module_activity_trampoline_add_dialog_hint_from" android:layout_marginStart="@dimen/common_view_margin_default" />
    <androidx.appcompat.widget.AppCompatEditText android:id="@id/from_comp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_view_margin_default" android:layout_marginRight="@dimen/common_view_margin_default" android:layout_marginHorizontal="@dimen/common_view_margin_default" />
    <com.google.android.material.textview.MaterialTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_view_margin_default" android:text="@string/module_activity_trampoline_add_dialog_hint_to" android:layout_marginStart="@dimen/common_view_margin_default" />
    <androidx.appcompat.widget.AppCompatEditText android:id="@id/to_comp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_view_margin_default" android:layout_marginRight="@dimen/common_view_margin_default" android:layout_marginHorizontal="@dimen/common_view_margin_default" />
    <com.google.android.material.textview.MaterialTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_view_margin_default" android:text="@string/module_activity_trampoline_add_dialog_hint_note" android:layout_marginStart="@dimen/common_view_margin_default" />
    <androidx.appcompat.widget.AppCompatEditText android:id="@id/note" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_view_margin_default" android:layout_marginRight="@dimen/common_view_margin_default" android:layout_marginHorizontal="@dimen/common_view_margin_default" />
</LinearLayout>
