<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/nnf_picker_toolbar" android:layout_width="match_parent" android:layout_height="?actionBarSize" android:layout_alignParentTop="true" app:titleTextAppearance="@style/TextAppearance.AppCompat.Subhead" app:titleTextColor="?colorControlNormal">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" android:ellipsize="start" android:id="@id/nnf_current_dir" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.recyclerview.widget.RecyclerView android:id="@android:id/list" android:focusable="true" android:descendantFocusability="afterDescendants" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@id/nnf_buttons_container" android:layout_below="@id/nnf_picker_toolbar" />
    <FrameLayout android:id="@id/nnf_buttons_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="horizontal" android:id="@id/nnf_button_container" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textColor="?colorAccent" android:id="@id/nnf_button_cancel" android:layout_width="0.0dp" android:layout_height="48.0dp" android:text="@string/nnf_list_cancel" android:layout_weight="1.0" style="?borderlessButtonStyle" />
            <Button android:textColor="?colorAccent" android:id="@id/nnf_button_ok" android:layout_width="0.0dp" android:layout_height="48.0dp" android:text="@string/nnf_list_ok" android:layout_weight="1.0" style="?borderlessButtonStyle" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/nnf_newfile_button_container" android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:textColor="?colorAccent" android:id="@id/nnf_text_filename" android:paddingLeft="8.0dp" android:paddingRight="8.0dp" android:layout_width="0.0dp" android:layout_height="48.0dp" android:hint="@string/nnf_filename" android:maxLines="1" android:layout_weight="1.0" />
            <ImageButton android:textColor="?colorAccent" android:id="@id/nnf_button_ok_newfile" android:layout_width="48.0dp" android:layout_height="48.0dp" android:tint="?colorAccent" android:hint="@string/nnf_list_ok" app:srcCompat="@drawable/nnf_ic_save_black_24dp" style="?borderlessButtonStyle" />
        </LinearLayout>
    </FrameLayout>
    <FrameLayout android:id="@id/divider" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_above="@id/nnf_buttons_container" />
</RelativeLayout>
