<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/donate_content" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <github.tornaco.android.thanos.widget.html.HtmlTextView android:id="@id/donate_text" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/common_view_margin_default" android:layout_marginTop="?actionBarSize" />
        <androidx.cardview.widget.CardView android:id="@id/my_card_view" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_view_margin_middle" android:layout_marginStart="@dimen/common_view_margin_middle" android:layout_marginEnd="@dimen/common_view_margin_middle" style="@style/CardViewStyle">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/common_view_margin_default">
                <TextView android:textColor="@color/md_grey_500" android:id="@id/my_card" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/module_donate_activation_code_my_code" android:layout_alignParentTop="true" android:textAllCaps="true" android:layout_alignParentStart="true" />
                <ImageView android:id="@id/show_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_eye_fill" android:tint="@color/md_grey_500" android:layout_alignParentTop="true" android:layout_alignParentEnd="true" />
                <github.tornaco.android.thanos.widget.GoogleProductSansBoldTextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:id="@id/id_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_view_margin_default" android:layout_below="@id/my_card" android:layout_centerHorizontal="true" android:fontFamily="sans-serif-condensed-light" />
                <TextView android:textColor="?colorControlNormal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_view_margin_default" android:text="@string/module_donate_activation_code_valid_remain_time" android:layout_below="@id/id_text" android:layout_alignParentStart="true" />
                <ImageView android:id="@id/copy_code" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_view_margin_default" android:src="@drawable/ic_file_copy_fill" android:tint="?colorControlNormal" android:layout_below="@id/id_text" android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout android:gravity="end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/common_view_margin_middle">
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:textColor="@color/md_white" android:id="@id/pay_wechat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_view_margin_default" android:layout_marginRight="@dimen/common_view_margin_default" android:tint="@color/md_white" android:text="@string/module_donate_pay_wechat" android:layout_marginHorizontal="@dimen/common_view_margin_default" app:backgroundTint="@color/md_green_500" app:icon="@drawable/ic_wechat_pay_fill" app:iconTint="@color/md_white" />
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:textColor="@color/md_white" android:id="@id/pay_ali" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_view_margin_default" android:layout_marginTop="@dimen/common_view_margin_fit" android:layout_marginRight="@dimen/common_view_margin_default" android:tint="@color/md_white" android:text="@string/module_donate_pay_alipay" android:layout_marginHorizontal="@dimen/common_view_margin_default" app:backgroundTint="@color/md_blue_a700" app:icon="@drawable/ic_alipay_fill" app:iconTint="@color/md_white" />
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:textColor="@color/md_white" android:id="@id/pay_pal" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_view_margin_default" android:layout_marginTop="@dimen/common_view_margin_fit" android:layout_marginRight="@dimen/common_view_margin_default" android:tint="@color/md_white" android:text="Paypal" android:layout_marginHorizontal="@dimen/common_view_margin_default" app:backgroundTint="@color/md_light_blue_800" app:icon="@drawable/ic_paypal_fill" app:iconTint="@color/md_white" />
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:textColor="@color/md_white" android:id="@id/active_hidden_feature" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_view_margin_default" android:layout_marginTop="@dimen/common_view_margin_fit" android:layout_marginRight="@dimen/common_view_margin_default" android:tint="@color/md_white" android:text="@string/module_donate_activation_code_start_verify" android:layout_marginHorizontal="@dimen/common_view_margin_default" app:backgroundTint="@color/md_amber_800" app:icon="@drawable/ic_login_circle_fill" app:iconTint="@color/md_white" />
        </LinearLayout>
        <View android:layout_width="wrap_content" android:layout_height="120.0dp" />
    </LinearLayout>
</ScrollView>
