<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:tag="layout/module_activity_trampoline_activity_0" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appbar" android:background="?android:windowBackground" android:layout_width="match_parent" android:layout_height="@dimen/common_coll_appbar_height" android:layout_alignParentTop="true" app:elevation="@dimen/common_toolbar_elevation">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:id="@id/toolbar_layout" android:background="?android:windowBackground" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent" app:collapsedTitleTextAppearance="@style/ToolbarCollapsedTitleTextAppearance" app:expandedTitleTextAppearance="@style/ToolbarExpandedTitleTextAppearance" app:layout_scrollFlags="scroll|exitUntilCollapsed" app:titleCollapseMode="scale" app:toolbarId="@id/toolbar">
            <FrameLayout android:id="@id/toolbar_container" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_collapseMode="pin">
                <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:layout_width="match_parent" android:layout_height="?actionBarSize" app:title="@string/module_activity_trampoline_app_name" app:titleTextAppearance="@style/ToolbarCollapsedTitleTextAppearance" app:titleTextColor="?colorControlNormal" />
                <com.miguelcatalan.materialsearchview.MaterialSearchView android:id="@id/search_view" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/SearchViewStyle" />
            </FrameLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout android:orientation="vertical" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <include android:id="@id/switch_bar_container" layout="@layout/module_common_switchbar_container" />
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@id/swipe" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView android:id="@id/replacements" android:tag="binding_3" android:layout_width="match_parent" android:layout_height="match_parent" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:layout_gravity="end|bottom" android:id="@id/fab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/common_view_margin_default" android:text="@string/common_fab_title_add" app:icon="@drawable/module_activity_trampoline_ic_add_fill" app:iconTint="?colorPrimary" style="@style/FloatingActionButtonStyle" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
